--- a/404.html
+++ b/404.html
@@ -2,6 +2,6 @@
     let url = window.location.href
     if (url.includes("/embed/")) {
         url = url.replace("?", "&")
-        window.location = `https://play0.gostream.video/embed/index.html?id=${url.split('/').pop()}`
+        window.location = `https://play.gostream.video/embed/index.html?id=${url.split('/').pop()}`
     }
 </script>
