--- a/404.html
+++ b/404.html
@@ -1,7 +1,12 @@
 <script>
-    let url = window.location.href
-    if (url.includes("/embed/")) {
-        url = url.replace("?", "&")
-        window.location = `https://play.gostream.video/embed/index.html?id=${url.split('/').pop()}`
+    self.location.ancestorOrigins[0]
+    if (domain) {
+        let url = window.location.href
+        if (url.includes("/embed/")) {
+            url = url.replace("?", "&")
+            window.location = `https://play.gostream.video/embed/index.html?id=${url.split('/').pop()}`
+        }
+    } else {
+        window.location = "https://dassh.gostream.video"
     }
 </script>
