--- a/404.html
+++ b/404.html
@@ -7,6 +7,6 @@
             window.location = `https://play.gostream.video/embed/index.html?id=${url.split('/').pop()}`
         }
     } else {
-        window.location = "https://dassh.gostream.video"
+        window.location = "https://dash.gostream.video"
     }
 </script>
