--- a/404.html
+++ b/404.html
@@ -1,5 +1,5 @@
 <script>
-    self.location.ancestorOrigins[0]
+    let domain = self.location.ancestorOrigins[0]
     if (domain) {
         let url = window.location.href
         if (url.includes("/embed/")) {
@@ -7,6 +7,6 @@
             window.location = `https://play.gostream.video/embed/index.html?id=${url.split('/').pop()}`
         }
     } else {
-        window.location = "https://dassh.gostream.video"
+        window.location = "https://dash.gostream.video"
     }
 </script>
