--- a/embed/index.html
+++ b/embed/index.html
@@ -4,11 +4,11 @@
 <head>
     <title>Player Go Stream</title>
     <meta charset="utf-8">
-    <script src="/static/js/p2p-media-loader-core.min.js"></script>
-    <script src="/static/js/p2p-media-loader-hlsjs.min.js"></script>
-    <script src="/static/js/jwplayer.hlsjs.min.js"></script>
-    <script src="/static/js/hls.js"></script>
-    <script src="/static/js/jwplayer.js"></script>
+    <script src="/play-gostream/static/js/p2p-media-loader-core.min.js"></script>
+    <script src="/play-gostream/static/js/p2p-media-loader-hlsjs.min.js"></script>
+    <script src="/play-gostream/static/js/jwplayer.hlsjs.min.js"></script>
+    <script src="/play-gostream/static/js/hls.js"></script>
+    <script src="/play-gostream/static/js/jwplayer.js"></script>
     <!-- JWplayer Licence - put your licence here -->
     <script type="text/javascript"> jwplayer.key = "eNFaXCjyURVoCCGiHp7HTQ3hDhE/AfL0g8VE1fRbL84=";</script>
 
