--- a/embed/index.html
+++ b/embed/index.html
@@ -10,7 +10,7 @@
     <script src="/play-gostream/static/js/hls.js"></script>
     <script src="/play-gostream/static/js/jwplayer.js"></script>
     <!-- JWplayer Licence - put your licence here -->
-    <script type="text/javascript"> jwplayer.key = "eNFaXCjyURVoCCGiHp7HTQ3hDhE/AfL0g8VE1fRbL84=";</script>
+   
 
     <meta name="referrer" content="no-referrer">
     <meta name="Iframe" content="width=device-width, initial-scale=1.0">
@@ -30,6 +30,6 @@
     <div id="player" style="width: 100%; height: 100%;"></div>
 </body>
 
-<script src="/static/js/app.min.js?v=5"></script>
+<script src="/play-gostream/static/js/app.min.js?v=5"></script>
 
 </html>
