--- a/embed/index.html
+++ b/embed/index.html
@@ -8,7 +8,8 @@
     <script src="/play-gostream/static/js/p2p-media-loader-hlsjs.min.js"></script>
     <script src="/play-gostream/static/js/jwplayer.hlsjs.min.js"></script>
     <script src="/play-gostream/static/js/hls.js"></script>
-    <script src="/play-gostream/static/js/jwplayer.js"></script>
+    
+    <script src="https://ssl.p.jwpcdn.com/player/v/8.21.1/jwplayer.js"></script>
     
     <script charset="utf-8" src="//ssl.p.jwpcdn.com/player/v/8.21.1/jwplayer.core.controls.js"></script>
     <!-- JWplayer Licence - put your licence here -->
