--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <body>
 
 <h1>Demo Player</h1>
-
-<iframe  style="width: 100%; height: 80vh;" src="https://play.gostream.video/embed/6106c885f110152e0d94835a"> </iframe>
-
+  <dev style="width: 100%; height: 80vh;">
+    <iframe  style="width: 100%; height: 100%;" src="https://play.gostream.video/embed/6106c885f110152e0d94835a"> </iframe>
+  </dev>
 </body>
 </html>
