--- a/index.html
+++ b/index.html
@@ -16,5 +16,5 @@
     }
 </style>
 <div class="video-container">
-    <iframe class="video" src="https://play.gostream.video/embed/6114d2edb5d8745bab7e553c" allowfullscreen></iframe>
+    <iframe class="video" src="https://p.gostream.video/embed/6114d2edb5d8745bab7e553c" allowfullscreen></iframe>
 </div>
