--- a/demo.html
+++ b/demo.html
@@ -12,7 +12,7 @@
             }), devtoolsDetector.lanuch())
         }();
     </script> -->
-<script src="http://ssl.p.jwpcdn.com/player/v/8.21.1/jwplayer.js"></script>
+<script src="//ssl.p.jwpcdn.com/player/v/8.21.1/jwplayer.js"></script>
 
 </head>
 <body style="margin: 0">
