--- a/demo.html
+++ b/demo.html
@@ -3,7 +3,7 @@
 <head>
 <title> GoStream </title>
 <meta charset="utf-8">
-<!-- <script src="https://public.gostream.video/js/devtools-detector/devtools-detector.js"></script>
+<script src="https://public.gostream.video/js/devtools-detector/devtools-detector.js"></script>
 <script>
         !function () {
             /*referans:box*/
@@ -11,7 +11,7 @@
                 t && (document.location.href = "https://public.gostream.video/404.html")
             }), devtoolsDetector.lanuch())
         }();
-    </script> -->
+</script>
 <script src="//ssl.p.jwpcdn.com/player/v/8.21.1/jwplayer.js"></script>
 
 </head>
